nambah umkm lagi

--- a/index.html
+++ b/index.html
@@ -629,6 +629,118 @@
               </div>
             </div>
 
+            <div
+              class="umkm-card"
+              data-lat="-7.621446070742879"
+              data-lng="110.89307281716393"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Makan Cinta Ayam Kampung Tim Goreng</h3>
+                <p>⭐ 5.0 (3 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620952391567828"
+              data-lng="110.89296398324026"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Mas Rio Dimsum</h3>
+                <p>⭐ 4.8 (11 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620952391567828"
+              data-lng="110.89296398324026"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Mas Rio Dimsum</h3>
+                <p>⭐ 4.8 (11 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+            
+            <div
+              class="umkm-card"
+              data-lat="-7.620782714105602"
+              data-lng="110.8932165757102"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Bakmi Lumayan Mas Di</h3>
+                <p>⭐ 4.4 (41 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.619023072097273"
+              data-lng="110.89272791559287"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Rumah Makan Riana</h3>
+                <p>⭐ 4.8 (9 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6189792063618995"
+              data-lng="110.89295925611583"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Mie Ayam & Bakso Agung Sidan</h3>
+                <p>⭐ 4.6 (9 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.61883830427001"
+              data-lng="110.89293645733855"
+              data-name="Warung makan"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Bakso dan Mie Ayam Maharani</h3>
+                <p>⭐ 4.8 (17 reviews)</p>
+                <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
             <!-- Toko -->
             <div
               class="umkm-card"
@@ -1622,6 +1734,326 @@
               </div>
             </div>
 
+            <div
+              class="umkm-card"
+              data-lat="-7.6215667697927465"
+              data-lng="110.8933035556709"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Hidan Distro</h3>
+                <p>⭐ 4.2 (11 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.621412575979656"
+              data-lng="110.8932344887887"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>WW Arloji</h3>
+                <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.62137801529044"
+              data-lng="110.89322510105733"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Mainan anak aura 2</h3>
+                <p>⭐ 5.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.621255058966782"
+              data-lng="110.89307556790651"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Sayur Segarku</h3>
+                <p>⭐ 5.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.621007555800082"
+              data-lng="110.89299147588281"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Rizky</h3>
+                <p>⭐ 4.0 (97 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620628037846831"
+              data-lng="110.8931541647288"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Al-Birru Busana Muslim</h3>
+                <p>⭐ 4.7 (30 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620617682459487"
+              data-lng="110.89298832962051"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Snack AL Snack Sidan</h3>
+                <p>⭐ 4.2 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620536597610645"
+              data-lng="110.89318547197921"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Babyque Babyshop</h3>
+                <p>⭐ 5.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620410317895488"
+              data-lng="110.89309628853114"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Serasi Galerry Hijab</h3>
+                <p>⭐ 3.5 (4 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6203644584114745"
+              data-lng="110.89310634681473"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Zain Petshop</h3>
+                <p>⭐ 4.8 (18 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620135825543014"
+              data-lng="110.89289109954407"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Olive Shoes</h3>
+                <p>⭐ 4.6 (9 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.619860003752472"
+              data-lng="110.89285220751388"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Parfum Albanna</h3>
+                <p>⭐ 4.5 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.618661986933593"
+              data-lng="110.89291943472008"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Victory Shoes & Bag</h3>
+                <p>⭐ (0 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.618440025636911"
+              data-lng="110.89288698283606"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Barokah</h3>
+                <p>⭐ 4.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.618331025773231"
+              data-lng="110.89283870307428"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Maju Jaya Fashion</h3>
+                <p>⭐ 4.3 (31 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.618235983185393"
+              data-lng="110.89266234783396"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Listrik Mang Mriki</h3>
+                <p>⭐ 5.0 (12 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.61808112353832"
+              data-lng="110.8927904233114"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Avisma Pancing</h3>
+                <p>⭐ 5.0 (3 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.617542105189604"
+              data-lng="110.89273946133669"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Jaya Tani</h3>
+                <p>⭐ 4.3 (35 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.617380598944723"
+              data-lng="110.89251616744009"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Dewa Busana</h3>
+                <p>⭐ 4.0 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+             <div
+              class="umkm-card"
+              data-lat="-7.617380598944723"
+              data-lng="110.89251616744009"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Dewa Busana</h3>
+                <p>⭐ 4.0 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
             <!-- Jasa -->
             <div
               class="umkm-card"
@@ -1859,6 +2291,22 @@
               <div class="card-info">
                 <h3>SHIFT Computer</h3>
                 <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.620683866748872"
+              data-lng="110.89314142423623"
+              data-name="Jasa"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-people-carry-box"></i>
+              </div>
+              <div class="card-info">
+                <h3>Verry Barbershop</h3>
+                <p>⭐ (0 review)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
