--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                 <p>📍 Wonorejo, Polokarto.</p>
               </div>
             </div>
-            
+
             <div
               class="umkm-card"
               data-lat="-7.620782714105602"
@@ -738,6 +738,86 @@
                 <h3>Warung Bakso dan Mie Ayam Maharani</h3>
                 <p>⭐ 4.8 (17 reviews)</p>
                 <p>📍 Wonorejo, Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.6134012755644385"
+              data-lng="110.8910354838553"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Kabayan Fried Chicken</h3>
+                <p>⭐ (0 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.613537309639239"
+              data-lng="110.89136774360713"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Kebab Sidan</h3>
+                <p>⭐ 4.0 (1 review)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.61374933001616"
+              data-lng="110.89183780073822"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Sate Kambing Pak Eko</h3>
+                <p>⭐ 4.8 (20 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.614259350436751"
+              data-lng="110.89392450027495"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Spesial Ayam Ingkung Tim "Bu Eva"</h3>
+                <p>⭐ 5.0 (6 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.614753144823288"
+              data-lng="110.89661750146321"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-bowl-rice"></i>
+              </div>
+              <div class="card-info">
+                <h3>Warung Makan Bu Ali</h3>
+                <p>⭐ 4.5 (4 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
 
@@ -2038,7 +2118,7 @@
               </div>
             </div>
 
-             <div
+            <div
               class="umkm-card"
               data-lat="-7.617380598944723"
               data-lng="110.89251616744009"
@@ -2050,6 +2130,182 @@
               <div class="card-info">
                 <h3>Toko Dewa Busana</h3>
                 <p>⭐ 4.0 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.61279298063304"
+              data-lng="110.88921121426353"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Abu Motor Sidan</h3>
+                <p>⭐ 4.8 (128 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.613335943707548"
+              data-lng="110.89096216304799"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Dafi Online</h3>
+                <p>⭐ 4.5 (13 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.613950640958451"
+              data-lng="110.89278134926684"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Kacamata Samsul</h3>
+                <p>⭐ 5.0 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.613971244803795"
+              data-lng="110.8928718738193"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Airy Fotocopy</h3>
+                <p>⭐ 4,4 (10 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.613994507209342"
+              data-lng="110.8929623983728"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Grosir Sirwal</h3>
+                <p>⭐ 4,8 (231 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.614015775693314"
+              data-lng="110.89303750022574"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Zamzam Moslem</h3>
+                <p>⭐ 4.7 (47 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.614222130611094"
+              data-lng="110.89377831988345"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko DFN Computer</h3>
+                <p>⭐ 5.0 (5 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.614387008122301"
+              data-lng="110.89466205493275"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Toyibs</h3>
+                <p>⭐ 5.0 (2 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.61450604027426"
+              data-lng="110.89507997732393"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Kala Jaya Plastik Packaging</h3>
+                <p>⭐ 4.7 (9 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.614570201999485"
+              data-lng="110.89530712316115"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>TB Sumber Agung</h3>
+                <p>⭐ 4.6 (33 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.615154453368384"
+              data-lng="110.89542257276722"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-shop"></i>
+              </div>
+              <div class="card-info">
+                <h3>Toko Sonia Daster</h3>
+                <p>⭐ 5.0 (3 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
@@ -2711,6 +2967,22 @@
               <div class="card-info">
                 <h3>Bengkel MNB (Mas Nur Bengkel)</h3>
                 <p>⭐ 5.0 (18 reviews)</p>
+                <p>📍 Wonorejo, Kec. Polokarto.</p>
+              </div>
+            </div>
+
+            <div
+              class="umkm-card"
+              data-lat="-7.613937423238159"
+              data-lng="110.8922917646122"
+              data-name="toko"
+            >
+              <div class="card-icon-container">
+                <i class="fa-solid fa-wrench"></i>
+              </div>
+              <div class="card-info">
+                <h3>Garasi Ban Sukoharjo 2</h3>
+                <p>⭐ 5.0 (34 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
             </div>
