--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a href="#home">Beranda</a>
           <a href="#about">Tentang Kami</a>
           <a href="#umkm">Daftar UMKM</a>
-          <a href="#contact">Kontak</a>
+          <!-- <a href="#contact">Kontak</a> -->
         </div>
         <div class="nav-toggle" id="nav-toggle">
           <i class="fa-solid fa-bars"></i>
@@ -1088,7 +1088,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Dewi"</h3>
+                <h3>Toko Dewi</h3>
                 <p>⭐ (0 review)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -1104,7 +1104,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Archery AJB Archery(Mas Aji)"</h3>
+                <h3>Toko Archery AJB Archery(Mas Aji)</h3>
                 <p>⭐ 5.0 (6 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -1120,7 +1120,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Pak Eko"</h3>
+                <h3>Toko Pak Eko</h3>
                 <p>⭐ (0 review)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -1136,7 +1136,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Agen FEN & Co"</h3>
+                <h3>Toko Agen FEN & Co</h3>
                 <p>⭐ 5.0 (4 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -1152,7 +1152,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Neo Online Polokarto"</h3>
+                <h3>Toko Neo Online Polokarto</h3>
                 <p>⭐ 5.0 (1 review)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -1168,7 +1168,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Zahra"</h3>
+                <h3>Toko Zahra</h3>
                 <p>⭐ 3.7 (10 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -1184,7 +1184,7 @@
                 <i class="fa-solid fa-shop"></i>
               </div>
               <div class="card-info">
-                <h3>Toko Bangunan TB. Murah"</h3>
+                <h3>Toko Bangunan TB. Murah</h3>
                 <p>⭐ 4.2 (5 reviews)</p>
                 <p>📍 Wonorejo, Kec. Polokarto.</p>
               </div>
@@ -3011,7 +3011,7 @@
           <a href="#home">Beranda</a>
           <a href="#about">Tentang Kami</a>
           <a href="#umkm">Daftar UMKM</a>
-          <a href="#contact">Kontak</a>
+          <!-- <a href="#contact">Kontak</a> -->
         </div>
 
         <div class="footer-contact">
